test/typechecker.d/invalid/main1.surc.bad
main(stdout: OutputStream) = do
	x <- 4
	writey "whoa" , stdout 
